--- a/voiceover_ios.html
+++ b/voiceover_ios.html
@@ -18,8 +18,9 @@ ios 14.5 이상 버전 구 버전차이.
     <a href="http://www.naver.com" target="_self">naver.com</a><br>
     <a href="http://www.naver.com" style="display:block;">naver.com</a><br>
     <button>naver.com</button><br>
-    <a role="button" tabindex="0" >test</a><br>
-    <a role="link" tabindex="0">test</a><br>
+    <a role="button" tabindex="0" >test - a /role="button"</a><br>
+    <a role="link" tabindex="0">test a / role=link</a><br>
+    <button role="link" tabindex="0">test button /role="link" </button><br>
 
     <h1>제목1</h1>
     <h2>제목2</h2>
@@ -30,8 +31,8 @@ ios 14.5 이상 버전 구 버전차이.
     <a href="http://www.naver.com" target="_self">naver.com</a><br>
     <a href="http://www.naver.com" style="display:block;">naver.com</a><br>
     <button>naver.com</button><br>
-    <a role="button" tabindex="0" >test</a><br>
-    <a role="link" tabindex="0">test</a><br>
+    <a role="button" tabindex="0" >test / a / role=button </a><br>
+    <a role="link" tabindex="0">test  / a / role=link </a><br>
 
     <p>cta 요소 , 비 cta 요소를 탐색하면 바로 전 cta 요소에 포커스(파란색 테두리)가 표시.</p>
 
