--- a/voiceover_ios.html
+++ b/voiceover_ios.html
@@ -23,6 +23,7 @@ ios 14.5 이상 버전 구 버전차이.
     <button role="link" tabindex="0">test button /role="link" </button><br>
 
     <h1>제목1</h1>
+    <a href="daume.net" target="_blank">daum.net</a>
     <h2>제목2</h2>
     <h3>제목3</h3>
     <h4>제목4</h4>
