feat update input test

--- a/input.html
+++ b/input.html
@@ -64,6 +64,20 @@
                        name="Phone"
                        id="cufc3">
               </p>
+                <p>
+                <label for="cufc3-1">
+                  new Phone:
+                  <span aria-hidden="true">
+                    *
+                  </span>
+                </label>
+                <input type="text"
+                       value=""
+                       name="Phone"
+                       id="cufc3-1"
+                       aria-required="true"
+                       >
+              </p>
               <p>
                 <label for="cufc4">
                   Extension:
