--- a/input.html
+++ b/input.html
@@ -26,6 +26,20 @@
              class="accordion-panel">
           <div>
             <fieldset>
+                <p>
+                <label for="cufc0">
+                 이름 
+                  <span aria-hidden="true">
+                    *
+                  </span>
+                  :
+                </label>
+                <input type="text"
+                       value=""
+                       name="Name"
+                       id="cufc0"
+                 >
+              </p>
               <p>
                 <label for="cufc1">
                   Name
