--- a/input.html
+++ b/input.html
@@ -37,17 +37,12 @@
               </p>
                 <p>
                 <label for="cufc0">
-                 이름 
-                  <span aria-hidden="true">
-                    *
-                  </span>
-                  :
+                 이름 :
                 </label>
                 <input type="text"
                        value=""
                        name="Name"
-                       id="cufc0"
-                 >
+                       id="cufc0">
               </p>
               <p>
                 <label for="cufc1">
