--- a/input.html
+++ b/input.html
@@ -38,6 +38,9 @@
                 <p>
                 <label for="cufc0">
                  이름 :
+                    <span aria-hidden="true">
+                    *
+                  </span>
                 </label>
                 <input type="text"
                        value=""
@@ -84,10 +87,11 @@
               </p>
                 <p>
                 <label for="cufc3-1">
-                  new Phone:
+                  new Phone
                   <span aria-hidden="true">
                     *
                   </span>
+                    :
                 </label>
                 <input type="text"
                        value=""
