--- a/input.html
+++ b/input.html
@@ -37,10 +37,11 @@
               </p>
                 <p>
                 <label for="cufc0">
-                 이름 :
-                    <span aria-hidden="true">
+                 이름 
+                     <strong aria-hidden="true">
                     *
-                  </span>
+                  </strong>
+                    :
                 </label>
                 <input type="text"
                        value=""
