--- a/input.html
+++ b/input.html
@@ -26,8 +26,18 @@
              class="accordion-panel">
           <div>
             <fieldset>
+                 <p>
+                <label>
+                  City/Province:
+                </label>
+                <input type="text"
+                       value=""
+                       title="City/Province 입력"
+                       name="City_Province"
+                 >
+              </p>
                 <p>
-                <label for="cufc6">
+                <label for="cufc6" aria-label="City/Province">
                   City/Province:
                 </label>
                 <input type="text"
@@ -36,7 +46,7 @@
                        id="cufc6">
               </p>
                 <p>
-                <label for="cufc0">
+                <label for="cufc0" >
                  이름 
                      <strong aria-hidden="true">
                     *
