--- a/input.html
+++ b/input.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    
+    <!--
+
+    IOS 이슈 
+    lable + input-text 조합에서는 id for 연결 생략 
+    lable + input-text for + id 연결시, label focus 가 가질 않음. 
+    그러나, <label for="a"> text <span>*</span></lable><input text="" id="a"> 이런경우는 lable 안에 focus 발생.
+    
+    문제가 크게 되지 않으니 lable + input text 조합시에는 id for 연결 생략 
+    -->
     <div id="accordionGroup" class="accordion">
         <h3>
           <button type="button"
